Refactor PropertiesDataFeed to support a polling subclass